# doc-chat-rag-app

backend/: .env.sample  .gitignore  auth.py  files.py  main.py  pyproject.toml  rag.py  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/api/: auth.py  files.py  rag.py
backend/app/auth/: dependencies.py  routes.py
backend/app/core/: chroma_connection.py  config.py
backend/app/rag/: dependencies.py  routes.py
backend/app/services/: auth_service.py  file_service.py  rag_service.py
backend/app/utils/: file_processing.py
backend/uploads/: 0ea892a9-f2d8-4e24-bea7-7aa54d2cd8ec_Document 2.docx  b4388dc2-9ac7-437b-90e2-986c52712f15_Project Description.docx  saad.signups@gmail.com_55dbd581-674c-4432-b2b9-0dd32f666b1e_Spring 2025_CS619_10913_3.docx
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: chat-interface.tsx  file-upload.tsx
frontend/src/components/auth/: login-form.tsx  user-menu.tsx
frontend/src/hooks/: use-auth.tsx
